Actualizando Nota