@@ -6,11 +6,31 @@ import org.hibernate.Query;
 import org.hibernate.Session;
 import org.hibernate.SessionFactory;
 import org.hibernate.Transaction;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import com.swaaad.dao.NotaDao;
+import com.swaaad.dto.NotasAlumno;
 import com.swaaad.model.Nota;
 
+/**
+ * 
+ * @author Nelys Mollocondo
+ * @version 1.0.0, 20/08/2017
+ * @see NotaDaoImpl
+ * @Creacion
+ * ******************************************************************
+ * 
+ * @author Christian Vilca
+ * @version 2.0.0, 21/08/2017
+ * @see NotaDaoImpl
+ * @Modificacion: Se añadieron metodos de consulta
+ */
+
 public class NotaDaoImpl implements NotaDao {
+    
+    private static final Logger logger = LoggerFactory.getLogger(Nota.class);
+    
 	/* implementa la interface NotaDao */
 
 	/**
@@ -32,6 +52,9 @@ public class NotaDaoImpl implements NotaDao {
 		this.sessionFactory = sessionFactory;
 	}
 
+	/**
+     * @see NotaDao#addNota(Nota)
+     */
 	@Override
 	public void addNota(Nota nota) throws Exception {
 		sSession = this.sessionFactory.openSession();
@@ -40,7 +63,87 @@ public class NotaDaoImpl implements NotaDao {
 		tTransaction.commit();
 		sSession.close();
 	}
+	
+    /**
+     * @see NotaDao#getAllNotas()
+     */
+    @SuppressWarnings("unchecked")
+    @Override
+    public List<Nota> getAllNotas() throws Exception {
+        sSession = sessionFactory.openSession();
+        List<Nota> listarNotas = sSession.createCriteria(Nota.class).list();
+        sSession.close();
+        return listarNotas;
+        
+    }
 
+    /**
+     * @see NotaDao#getAllNotasByIdCurso()
+     */
+    @SuppressWarnings("unchecked")
+    @Override
+    public List<Nota> getAllNotasByIdCurso(int idCurso) throws Exception {
+        sSession = sessionFactory.openSession();
+        List<Nota> listarNotas =null;
+        try {
+            //String queryNota = "SELECT e FROM Nota e JOIN e.curso c  WHERE c.idCurso = :id";
+            String queryNota = "SELECT n FROM Nota n JOIN n.evaluacion e JOIN e.curso c WHERE c.idCurso = :id";
+            //String queryNota = "SELECT a.idAlumno, a.apellidos, a.nombres, c.idCurso, c.nombreCurso, e.idEvaluacion, e.nombre, n.idNota, n.notaEvaluativa"
+            //        + "FROM Nota n JOIN n.evaluacion e JOIN n.alumno a JOIN e.curso c  WHERE c.idCurso = :id ORDER BY e";
+            
+            Query query = sSession.createQuery(queryNota);
+            query.setInteger("id", idCurso);
+            
+            listarNotas = (List<Nota>) query.list();
+            /*
+            for (NotasAlumno notasAlumno : listarNotas) {
+                System.out.println(notasAlumno.getIdAlumno() + ", "
+                        + notasAlumno.getApellidosAlumno() + ", "  
+                        + notasAlumno.getNombresAlumno() + ", "  
+                        + notasAlumno.getIdCurso() + ", "  
+                        + notasAlumno.getCurso() + ", "  
+                        + notasAlumno.getIdEvaluacion() + ", "  
+                        + notasAlumno.getEvaluacion() + ", "  
+                        + notasAlumno.getIdNota() + ", "  
+                        + notasAlumno.getNota());
+            }*/
+
+        } catch (Exception e) {
+            logger.info("Metodo getAllNotasByIdCurso: ", e);
+        } finally {
+            sSession.flush();
+            sSession.close();
+
+        }
+        
+        return listarNotas;
+//        sSession = sessionFactory.openSession();
+//        List<Nota> listarNotas =null;
+//        try {
+//            //String queryNota = "SELECT e FROM Nota e JOIN e.curso c  WHERE c.idCurso = :id";
+//            String queryNota = "SELECT n FROM Nota n JOIN n.evaluacion e JOIN e.curso c WHERE c.idCurso = :id ORDER BY e";
+//            String queryNota = "SELECT n FROM Nota n JOIN n.evaluacion e JOIN n.alumno a JOIN e.curso c  WHERE c.idCurso = :id ORDER BY e";
+//            
+//            Query query = sSession.createQuery(queryNota);
+//            query.setInteger("id", idCurso);
+//            
+//            listarNotas = (List<Nota>) query.list();
+//            
+//
+//        } catch (Exception e) {
+//            logger.info("Metodo getAllNotasByIdCurso: ", e);
+//        } finally {
+//            sSession.flush();
+//            sSession.close();
+//
+//        }
+//        
+//        return listarNotas;
+    }
+    
+    /**
+     * @see NotaDao#getNotaById()
+     */
 	@Override
 	public Nota getNotaById(int idNota) throws Exception {
 		sSession = sessionFactory.openSession();
@@ -52,7 +155,7 @@ public class NotaDaoImpl implements NotaDao {
 			nota = (Nota) query.uniqueResult();
 
 		} catch (Exception e) {
-			e.printStackTrace();
+		    logger.info("Metodo getNotaById: ", e);
 		} finally {
 			sSession.flush();
 			sSession.close();
@@ -61,7 +164,39 @@ public class NotaDaoImpl implements NotaDao {
 
 		return nota;
 	}
+	
+	/**
+     * @see NotaDao#getNotaById()
+     */
+    @Override
+    public int getIdNotaByIdAlumnoIdEvaluacion(int idAlumno, int idEvaluacion) throws Exception {
+        sSession = sessionFactory.openSession();
+        Nota nota = null;
+        try {
+            String queryNota = "From Nota Where ID_ALUMNO= :idAlumno AND ID_EVALUACION= :idEvaluacion";
+            Query query = sSession.createQuery(queryNota);
+            query.setInteger("idAlumno", idAlumno);
+            query.setInteger("idEvaluacion", idEvaluacion);
+            nota = (Nota) query.uniqueResult();
+            
+            if(nota==null){
+                return 0;
+            }
 
+        } catch (Exception e) {
+            logger.info("Metodo getNotaById: ", e);
+        } finally {
+            sSession.flush();
+            sSession.close();
+
+        }
+
+        return nota.getIdNota();
+    }
+
+	/**
+     * @see NotaDao#updateNota()
+     */
 	@Override
 	public void updateNota(Nota nota) throws Exception {
 		sSession = sessionFactory.openSession();
@@ -69,14 +204,14 @@ public class NotaDaoImpl implements NotaDao {
 			tTransaction = sSession.beginTransaction();
 			sSession.update(nota);
 			tTransaction.commit();
-			System.out.println("se actualizo");
+			logger.info("Se actualizo");
 		} catch (RuntimeException e) {
 
 			if (tTransaction != null) {// verifica hubosi un cambio en caso
 				tTransaction.rollback();// desase e
 
 			}
-			e.printStackTrace();
+			logger.info("Metodo updateNota: ", e);
 		} finally {
 			sSession.flush();
 			sSession.close();
@@ -84,6 +219,9 @@ public class NotaDaoImpl implements NotaDao {
 
 	}
 
+	/**
+     * @see NotaDao#deleteNota()
+     */
 	@Override
 	public void deleteNota(int idNota) throws Exception {
 		sSession = sessionFactory.openSession();// crea sesion con la base de
@@ -94,7 +232,7 @@ public class NotaDaoImpl implements NotaDao {
 			// para hacer
 			// una transaccion en este
 			// casoeliminar
-			Nota nota = (Nota) sSession.load(Nota.class, new Integer(idNota));// obtiene
+			Nota nota = (Nota) sSession.load(Nota.class, Integer.valueOf(idNota));// obtiene
 			// al
 			// alumno
 			sSession.delete(nota);// elimina al alumno
@@ -105,21 +243,12 @@ public class NotaDaoImpl implements NotaDao {
 			if (tTransaction != null) {// verifica hubosi un cambio en caso
 				tTransaction.rollback();// desase e
 			}
-			e.printStackTrace();
+			logger.info("Metodo deleteNota: ", e);
 		} finally {
 			sSession.flush();
 			sSession.close();// ciera la sesion
 		}
 
-	}
-
-	@SuppressWarnings("unchecked")
-	@Override
-	public List<Nota> getAllNotas() throws Exception {
-		@SuppressWarnings("unchecked")
-		List<Nota> listarNota = sSession.createCriteria(Nota.class).list();
-		sSession.close();
-		return listarNota;
 	}
 
 }
